--- a/index3.html
+++ b/index3.html
@@ -32,7 +32,7 @@
                             style="font-size:36px;color:#424242"></i></a>
                 </div>
                 <div id="fafa-plus3">
-                    <a href="./page_4.html"><i class="fa fa-plus-circle"
+                    <a href="./index4.html"><i class="fa fa-plus-circle"
                             style="font-size:40px; color: #00A5EC;"></i></a>
                 </div>
                 <div id="fafa-task3">
