--- a/index4.html
+++ b/index4.html
@@ -71,7 +71,7 @@
                 <h2>Add new Item</h2>
             </div>
             <div id="popup-cross">
-                <a href="./page_3.html"><i class="fa fa-close" style="font-size:24px"></i></a>
+                <a href="./index3.html"><i class="fa fa-close" style="font-size:24px"></i></a>
             </div>
         </div>
         <hr>
